0.02

0.01 2024-04-24T15:45:49+02:00
 - First version.