@@ -27,7 +27,7 @@ no_index:
     - xt
 requires:
   Mo: 0
-  Mo::utils: 0.09
+  Mo::utils: 0.28
   Mo::utils::Email: 0
   perl: 5.8.0
 resources:
