@@ -1,4 +1,5 @@
 0.02
+ - Rewrite check for id to Mo::utils::check_number_id().
 
 0.01 2024-04-24T15:45:49+02:00
  - First version.
